2005-01-06 Anatoly Sokolov <aesok@post.ru>

	* /libm/fplib/sqrt.S: Use __addsf3/__divsf3 instead 
	__addsf3x/__divsf3x.

2005-01-06 Anatoly Sokolov <aesok@post.ru>

	(Contributed by Dmitry Xmelkov.)
	* libm/fplib/ldexp.S: Fix error if 'exp' argument > 32640.

2006-01-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: add ATtinyX61, catch errors for
	non-existent ALT_NAME sections in interrupt vector table
	* doc/api/vectortable.dox: regenerate using patch-headers.py.

2006-01-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Extend the simple demo project to a boatload full of
	different AVRs: ATmega164/324/644, ATtiny261/461/861,
	ATmega165, ATmega169, ATmega325x/645x, ATmega329x/649x
	* doc/examples/demo/Makefile: Document all supported devices.
	* doc/examples/demo/demo.c: make variables local to ISR, use
	TIMER1_PWM_INIT to setup TCCR1A.
	* doc/examples/demo/demo.dox: Document TIMER1_PWM_INIT,
	swap notes 2 and 3.
	* doc/examples/demo/iocompat.h: Add support for all mentioned
	devices.

2005-01-04 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the ATtiny261/461/861 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATtiny261/461/861.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iotn24.h: new file.
	* include/avr/iotn44.h: new file.
	* include/avr/iotn84.h: new file.
	* include/avr/iotnx4.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATtiny261/461/861.
	* doc/api/using-tools.dox: (Ditto.)

2006-01-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Changes to the demo projects and their documentation.
	Partially based on ideas submitted by Mark J Elkins.
	* doc/examples/Makefile.am: Include largedemo-wiring2.jpg.
	* doc/examples/all-demos.dox: Document the prerequisites for
	the demos.
	* doc/examples/demo/Makefile: Add dependency from iocompat.h.
	* doc/examples/demo/demo.c: Port the simple demo to ATmega8515,